--- a/elmdict/hitachi/pom.xml
+++ b/elmdict/hitachi/pom.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2022 the original author or authors.
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~
-  ~        https://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  ~
-  -->
+  ~ This file is generated from element dictionary template files included in
+  ~ David Clunie's Dicom3tools Software (https://www.dclunie.com/dicom3tools.html)
+-->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -63,7 +51,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>Harmony10</value>
+                  <value>Harmony_R1_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -73,7 +61,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony10.java</targetName>
+                  <targetName>Harmony_R1_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -92,7 +80,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony10.properties</targetName>
+                  <targetName>Harmony_R1_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -109,7 +97,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>Harmony10C2</value>
+                  <value>Harmony_R1_0_C2</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -119,7 +107,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony10C2.java</targetName>
+                  <targetName>Harmony_R1_0_C2.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -138,7 +126,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony10C2.properties</targetName>
+                  <targetName>Harmony_R1_0_C2.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -155,7 +143,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>Harmony10C3</value>
+                  <value>Harmony_R1_0_C3</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -165,7 +153,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony10C3.java</targetName>
+                  <targetName>Harmony_R1_0_C3.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -184,7 +172,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony10C3.properties</targetName>
+                  <targetName>Harmony_R1_0_C3.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -201,7 +189,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>Harmony20</value>
+                  <value>Harmony_R2_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -211,7 +199,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony20.java</targetName>
+                  <targetName>Harmony_R2_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -230,7 +218,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/hitachi</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Harmony20.properties</targetName>
+                  <targetName>Harmony_R2_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
