--- a/elmdict/elscint/pom.xml
+++ b/elmdict/elscint/pom.xml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2021 the original author or authors.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+  ~ This file is generated from element dictionary template files included in
+  ~ David Clunie's Dicom3tools Software (https://www.dclunie.com/dicom3tools.html)
+-->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -32,10 +21,6 @@
       <groupId>org.dcm4assange</groupId>
       <artifactId>dcm4assange-core</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
     </dependency>
   </dependencies>
 
@@ -66,7 +51,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>Elscint</value>
+                  <value>ELSCINT1</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -76,7 +61,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/elscint</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Elscint.java</targetName>
+                  <targetName>ELSCINT1.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -95,7 +80,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/elscint</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Elscint.properties</targetName>
+                  <targetName>ELSCINT1.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
