--- a/elmdict/isg/pom.xml
+++ b/elmdict/isg/pom.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2022 the original author or authors.
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~
-  ~        https://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  ~
-  -->
+  ~ This file is generated from element dictionary template files included in
+  ~ David Clunie's Dicom3tools Software (https://www.dclunie.com/dicom3tools.html)
+-->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -63,7 +51,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>ISGShadow</value>
+                  <value>ISG_shadow</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -73,7 +61,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>ISGShadow.java</targetName>
+                  <targetName>ISG_shadow.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -92,7 +80,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>ISGShadow.properties</targetName>
+                  <targetName>ISG_shadow.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -109,7 +97,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>SilhouetteAnnot</value>
+                  <value>Silhouette_Annot_V1_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -119,7 +107,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteAnnot.java</targetName>
+                  <targetName>Silhouette_Annot_V1_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -138,7 +126,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteAnnot.properties</targetName>
+                  <targetName>Silhouette_Annot_V1_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -155,7 +143,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>SilhouetteGraphicsExport</value>
+                  <value>Silhouette_Graphics_Export_V1_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -165,7 +153,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteGraphicsExport.java</targetName>
+                  <targetName>Silhouette_Graphics_Export_V1_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -184,7 +172,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteGraphicsExport.properties</targetName>
+                  <targetName>Silhouette_Graphics_Export_V1_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -201,7 +189,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>SilhouetteLine</value>
+                  <value>Silhouette_Line_V1_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -211,7 +199,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteLine.java</targetName>
+                  <targetName>Silhouette_Line_V1_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -230,7 +218,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteLine.properties</targetName>
+                  <targetName>Silhouette_Line_V1_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -247,7 +235,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>SilhouetteROI</value>
+                  <value>Silhouette_ROI_V1_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -257,7 +245,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteROI.java</targetName>
+                  <targetName>Silhouette_ROI_V1_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -276,7 +264,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteROI.properties</targetName>
+                  <targetName>Silhouette_ROI_V1_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -293,7 +281,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>SilhouetteSequenceIds</value>
+                  <value>Silhouette_Sequence_Ids_V1_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -303,7 +291,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteSequenceIds.java</targetName>
+                  <targetName>Silhouette_Sequence_Ids_V1_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -322,7 +310,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>SilhouetteSequenceIds.properties</targetName>
+                  <targetName>Silhouette_Sequence_Ids_V1_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -339,7 +327,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>Silhouette</value>
+                  <value>Silhouette_V1_0</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -349,7 +337,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Silhouette.java</targetName>
+                  <targetName>Silhouette_V1_0.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -368,7 +356,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/isg</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>Silhouette.properties</targetName>
+                  <targetName>Silhouette_V1_0.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
