--- a/elmdict/picker/pom.xml
+++ b/elmdict/picker/pom.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2022 the original author or authors.
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~
-  ~        https://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  ~
-  -->
+  ~ This file is generated from element dictionary template files included in
+  ~ David Clunie's Dicom3tools Software (https://www.dclunie.com/dicom3tools.html)
+-->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -63,7 +51,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>PickerMR</value>
+                  <value>Picker_MR_Private_Group</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -73,7 +61,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/picker</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>PickerMR.java</targetName>
+                  <targetName>Picker_MR_Private_Group.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -92,7 +80,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/picker</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>PickerMR.properties</targetName>
+                  <targetName>Picker_MR_Private_Group.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -109,7 +97,7 @@
                 </parameter>
                 <parameter>
                   <name>class</name>
-                  <value>PickerNM</value>
+                  <value>Picker_NM_Private_Group</value>
                 </parameter>
                 <parameter>
                   <name>PrivateCreatorID</name>
@@ -119,7 +107,7 @@
               <outputDir>target/generated-sources/org/dcm4assange/elmdict/picker</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>PickerNM.java</targetName>
+                  <targetName>Picker_NM_Private_Group.java</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
@@ -138,7 +126,7 @@
               <outputDir>target/generated-resources/org/dcm4assange/elmdict/picker</outputDir>
               <fileMappers>
                 <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.MergeFileMapper">
-                  <targetName>PickerNM.properties</targetName>
+                  <targetName>Picker_NM_Private_Group.properties</targetName>
                 </fileMapper>
               </fileMappers>
             </transformationSet>
